cats-dogs-aka-votingapp/k8s/deploy-db.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: db
spec:
  template:
    metadata:
      labels:
        app: votingapp
    spec:  
      containers:
      - name: db
        image: postgres:9.4
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 5432
          protocol: TCP
