cats-dogs-aka-votingapp/k8s/deploy-result.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: result
spec:
  template:
    metadata:
      labels:
        app: votingapp
    spec:  
      containers:
      - name: result
        image: eesprit/voting-app-result:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 80
          protocol: TCP
