cats-dogs-aka-votingapp/k8s/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: db
  name: db
  namespace: default
spec:
  ports:
  - port: 5432
    protocol: TCP
    targetPort: 5432
  selector:
    component: db
  sessionAffinity: None
  type: ClusterIP
