cats-dogs-aka-votingapp/k8s/service-redis.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: redis
  name: redis
  namespace: default
spec:
  ports:
  - port: 6379
    protocol: TCP
    targetPort: 6379
  selector:
    run: redis
  sessionAffinity: None
  type: ClusterIP
