cats-dogs-aka-votingapp/k8s/service-result.yaml
apiVersion: v1
kind: Service
metadata:
  name: result
  namespace: default
spec:
  ports:
  - port: 5001
    protocol: TCP
    targetPort: 80
  selector:
    run: result
  sessionAffinity: None
  type: ClusterIP
