cats-dogs-aka-votingapp/k8s/service-vote.yaml
apiVersion: v1
kind: Service
metadata:
  name: vote
  namespace: default
spec:
  ports:
  - port: 5000
    protocol: TCP
    targetPort: 80
  selector:
    run: vote
  sessionAffinity: None
  type: ClusterIP
