cats-dogs-aka-votingapp/k8s/ingress-result.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: result
  namespace: default
spec:
  backend:
    serviceName: result
    servicePort: 5001
