cats-dogs-aka-votingapp/k8s/ingress-vote.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: vote
  namespace: default
spec:
  backend:
    serviceName: vote
    servicePort: 5000
